alignment fix

--- a/index.css
+++ b/index.css
@@ -65,13 +65,24 @@ ul li{
     
     
 }
+.content {
+    text-align: left;
+    margin-left: 300px;
+}
 .texth1{
 font-family: 'DM Sans', sans-serif;
 padding: 100px , 100px;
-margin-left: 300px;
+
 margin-top: 150px;
 
 }
+
 span{
     line-height: 10px;
+}
+
+.there{
+    width:500px;
+    margin-top: 30px;
+
 }
